# 2025

./: .gitignore  README.md
Jarvis_v2.0/: README.md  cli.py  pyproject.toml
Jarvis_v2.0/jarvis/actions/: __init__.py
Jarvis_v2.0/jarvis/asr/: __init__.py
Jarvis_v2.0/jarvis/audio/: __init__.py
Jarvis_v2.0/jarvis/config/: constants.py  settings.py
Jarvis_v2.0/jarvis/core/: orchestrator.py
Jarvis_v2.0/jarvis/llm/: __init__.py  client.py
Jarvis_v2.0/jarvis/plugins/: music.py  search.py  smart_home.py  time.py  weather.py
Jarvis_v2.0/jarvis/tools/: __init__.py
Jarvis_v2.0/jarvis/tts/: __init__.py
Jarvis_v2.0/jarvis/wakeword/: __init__.py
duplicate-key/: Program.cs  duplicate-key.csproj
expression-parser/: Program.cs  expression-parser.csproj  expression-parser.sln
expression-parser/Laxers/: Laxer.cs
expression-parser/Parsers/: Parser.cs
expression-parser/Tokens/: Token.cs  TokenType.cs
react/: package-lock.json
react-learning/frontend/: index.html  package-lock.json  package.json
sqlmodel-journey/: requirements.txt  server.py
sqlmodel-journey/app/: config.py  crud.py  database.py  main.py  models.py
tools-reasonning/: config.py  main.py  reasoning.py  requirements.txt  schema.py  tools.py
trip-planner/: Dockerfile  README.md  docker-compose.yaml  init.sql  main.py  requirements-dev.txt  requirements.txt
trip-planner/models/: attraction.py
trip-planner/utils/: schema.py  (+1 more)
vue-jsx/: package-lock.json  package.json
vue-webcontainer/: cert.pem  convert_fs.py  index.html  key.pem  package-lock.json  package.json  vite.config.js
(+93 files in other folders)
