[project]
name = "jarvis-v2"
version = "2.0.0"
description = "下一代语音助手，支持多模型、多工具调用、插件化扩展"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "pyaudio==0.2.13",
    "python-dotenv==1.0.0",
    "requests==2.28.2",
    "pydub==0.25.1",
    "edge-tts",
    "whisper"
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project.scripts]
jarvis = "cli:main" 
